<resources>
    <string name="app_name">Anroid-Pv-221</string>
    <string name="app_title">Знайомство з Андроїд</string>
    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_game">2048</string>
    <string name="main_btn_anim">Анімації</string>

    <!-- region Calc -->
    <string name="calc_tv_title">Калькулятор</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_inverse">¹⁄ₓ</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u221A</string>
    <string name="calc_btn_divide">\u00F7</string>
    <string name="calc_btn_multiply">×</string>
    <string name="calc_btn_minus">-</string>
    <string name="calc_btn_plus">+</string>
    <string name="calc_btn_pm">±</string>
    <string name="calc_btn_coma">,</string>
    <string name="calc_btn_equal">=</string>


    <string name="calc_btn_digit_0">\uA668</string>
    <string name="calc_btn_digit_1">1</string>
    <string name="calc_btn_digit_2">2</string>
    <string name="calc_btn_digit_3">3</string>
    <string name="calc_btn_digit_4">4</string>
    <string name="calc_btn_digit_5">5</string>
    <string name="calc_btn_digit_6">6</string>
    <string name="calc_btn_digit_7">7</string>
    <string name="calc_btn_digit_8">8</string>
    <string name="calc_btn_digit_9">9</string>
    <string name="calc_msg_too_long">Ліміт цифр досягнуто</string>
    <string name="calc_error_divide_by_zero">Ділення на нуль неможливе</string>
    <string name="calc_error_invalid_input">Введено некоректні дані</string>

    <!-- endregion -->


    <!-- region Anim -->
    <string name="anim_tv_alpha">Альфа</string>
    <string name="anim_tv_scale">Масштаб</string>
    <string name="anim_tv_rotate">Поворот</string>
    <string name="anim_tv_translate">Зміщення</string>
    <string name="anim_tv_combo">Комбінована</string>
    <!-- endregion -->
    <!--region Game-->
    <string name="game_tv_score">SCORE\n%s</string>
    <string name="game_tv_best">BEST\n%s</string>
    <string name="game_tv_new">NEW</string>
    <string name="game_tv_undo">UNDO</string>
    <string name="game_tv_hint">Збирай 2048</string>
    <string name="game_tv_2048">2048</string>
    <!--endregion-->
</resources>