<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/game_tv_2048"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/game_cell"
            android:backgroundTint="@color/game_tile_2048"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/game_text_2048"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_tv_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/game_cell"
                android:backgroundTint="@color/game_tv_background"
                android:text="@string/game_tv_score"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:paddingVertical="5dp"
                />

            <Button
                android:id="@+id/game_btn_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/calc_btn_digit"
                android:backgroundTint="@color/game_btn_background"
                app:backgroundTint="@null"
                android:text="@string/game_tv_new"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_tv_best_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/game_cell"
                android:backgroundTint="@color/game_tv_background"
                android:text="@string/game_tv_best"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:paddingVertical="5dp"
                />


            <Button
                android:id="@+id/game_btn_undo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/calc_btn_digit"
                android:backgroundTint="@color/game_btn_background"
                app:backgroundTint="@null"
                android:textSize="20sp"
                android:text="@string/game_tv_undo"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:text="@string/game_tv_hint" />

    <LinearLayout
        android:id="@+id/game_ll_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/calc_history_color"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/game_cell_00"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_01"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_02"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_03"
                style="@style/game_cell" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/game_cell_10"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_11"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_12"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_13"
                style="@style/game_cell" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/game_cell_20"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_21"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_22"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_23"
                style="@style/game_cell" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/game_cell_30"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_31"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_32"
                style="@style/game_cell" />

            <TextView
                android:id="@+id/game_cell_33"
                style="@style/game_cell" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>